# LF17-Sensoranwendung

./: .gitignore  404.html  README.md  index.html  schik.ps1  schik2.ps1
.github/workflows/: ci.yaml
01_aufgabe-2.3/: index.html
01_aufgaben/: index.html
01_index/: index.html
01_klassenbeziehungen/: index.html
01_klassenbeziehungen-aufgaben/: index.html
01_klassenbeziehungen-aufgaben-loesung/: index.html
01_lsg/: index.html
01_wdh/: index.html
02_aufgaben-ac/: index.html
02_aufgaben-sensor/: index.html
02_index/: index.html
02_it-sicherheit/: index.html
02_it-sicherheit-aufgaben/: index.html
02_wdh/: index.html
03_aufgaben-begriffe/: index.html
03_aufgaben-datenschutz/: index.html
03_datenschutz/: index.html
03_datenschutz-aufgaben/: index.html
03_index/: index.html
03_index-auswertung/: index.html
03_wdh-begriffe/: index.html
03_wdh-datenschutz/: index.html
03_wdh-grundlagen/: index.html
04_aufgabe-2.1/: index.html
04_aufgaben/: index.html
04_index/: index.html
04_projektierung/: index.html
04_software-architecture/: index.html
05_aufgabe-2.2/: index.html
05_projektierung/: index.html
ablauf/: index.html
images/: __MVVM.drawio  __camera.drawio  __it-security_camera.drawio
mkdocs/: mkdocs.yaml
mkdocs/docs/: 01_aufgabe-2.3.md  01_aufgaben.md  (+41 more)
python-app/: pyproject.toml
python-app/docs/: Klassendiagramm.dia
python-app/src/: main.py
python-app/src/lf17_sensor/: __main__.py  component.py  data_getter.py  data_storage.py  main_controller.py  main_window.py  room_heater.py
search/: search_index.json
(+2 files in other folders)
