[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lf17_sensor"
dynamic = ["version"]
dependencies = [
    "PySide6",
	"requests",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
]

[project.scripts]
"lf17_sensor" = "lf17_sensor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
